--- a/Docx2dataframe_final.ipynb
+++ b/Docx2dataframe_final.ipynb
@@ -20,33 +20,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "#specific to extracting information from word documents\n",
     "import os\n",
     "import zipfile\n",
+    "\n",
     "#other tools useful in extracting the information from our document\n",
     "import re\n",
-    "import copy\n",
-    "\n",
     "\n",
     "#to read XML and JSON\n",
-    "import xml.etree.ElementTree as ET\n",
-    "from xml.etree.ElementTree import XML\n",
     "from lxml import etree\n",
     "import json\n",
     "\n",
-    "#to pretty print our xml:\n",
-    "import xml.dom.minidom\n",
-    "from xml.dom.minidom import parse, parseString\n",
-    "\n",
     "#to use dataframes\n",
-    "import pandas as pd\n",
-    "\n",
-    "#import dateparser\n",
-    "#import collections\n"
+    "import pandas as pd"
    ]
   },
   {
@@ -69,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,29 +105,6 @@
     "#Physical description\n",
     "#Creator\n",
     "#Language\n",
-    "'''\n",
-    "Is it possible to use tags multiple times for each entry / row? \n",
-    "Fields like language and creator potentially have multiple entries. \n",
-    "It would also be useful if possible to have multiple reference tags, e.g. ReferenceOld, ReferenceNew. \n",
-    "(in the example you provided there are actually 2 references given, e.g. 1 Mss Eur G 1 is technically \n",
-    "ReferenceOld: 1, ReferenceNew: Mss Eur G 1), or a reference which identifies a new record, \n",
-    "and a legacy reference held by that record. If not then these could be recorded as one tag \n",
-    "and split by the cataloguer at a later stage.\n",
-    "\n",
-    " \n",
-    "\n",
-    "The International Standard for Archival Description specifies 6 essential fields\n",
-    "to support international data transfer: reference, title, creator, dates, extent, \n",
-    "and level of description. Extent and level are best added after by the cataloguer \n",
-    "and not taken from the legacy source.\n",
-    "\n",
-    " \n",
-    "\n",
-    "Similarly, the IAMS guidelines specify 15/17 minimum fields depending on level of\n",
-    "description, but many of them are auto-populated (e.g. legal status), inherited from\n",
-    "collection descriptions, or best completed with automated look-up (e.g. ISO language and script codes).\n",
-    "'''\n",
-    "\n",
     "\n",
     "\n",
     "p = './w:r//w:t'\n",
@@ -151,132 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "table = pd.DataFrame()\n",
-    "\n",
-    "ReferenceOld_dic = {}\n",
-    "ReferenceNew_dic = {}\n",
-    "title_dic = {}\n",
-    "ContentDescription_dic = {}\n",
-    "PhysicalDescription_dic = {}\n",
-    "date_dic = {}\n",
-    "\n",
-    "\n",
-    "for i, para in enumerate(et.xpath('//w:p', namespaces=ns)):\n",
-    "    \n",
-    "    ##TODO: here we could add some contraints in case there is just old or new refernce (or we add it to the guidelines)\n",
-    "    \n",
-    "    check = para.xpath(ReferenceOld_xpath, namespaces=ns)\n",
-    "    if check:\n",
-    "        text = para.xpath(ReferenceOld_xpath, namespaces=ns)\n",
-    "        ReferenceOld = \" \".join([t.text.strip() for t in text]).strip('\\n')\n",
-    "    \n",
-    "    check = para.xpath(ReferenceNew_xpath, namespaces=ns)\n",
-    "    if check:\n",
-    "        text = para.xpath(ReferenceNew_xpath, namespaces=ns)\n",
-    "        ReferenceNew = \" \".join([t.text.strip() for t in text]).strip('\\n')\n",
-    "\n",
-    "        \n",
-    "    \n",
-    "    check = para.xpath(title_xpath, namespaces=ns)\n",
-    "    if check:\n",
-    "        text = para.xpath(title_xpath, namespaces=ns)\n",
-    "        title = \" \".join([t.text.strip() for t in text]).strip('\\n')\n",
-    "    else: \n",
-    "        title = ''\n",
-    "    \n",
-    "    check = para.xpath(PhysicalDescription_xpath, namespaces=ns)\n",
-    "    if PhysicalDescription_xpath:\n",
-    "        text = para.xpath(PhysicalDescription_xpath, namespaces=ns)\n",
-    "        PhysicalDescription = \" \".join([t.text.strip() for t in text]).strip(' \\n')\n",
-    "    else: \n",
-    "        PhysicalDescription = ''\n",
-    "    \n",
-    "    check = para.xpath(ContentDescription_xpath, namespaces=ns)\n",
-    "    if ContentDescription_xpath:\n",
-    "        text = para.xpath(ContentDescription_xpath, namespaces=ns)\n",
-    "        ContentDescription = \" \".join([t.text.strip() for t in text]).strip(' \\n')\n",
-    "    else: \n",
-    "        ContentDescription = ''\n",
-    "    \n",
-    "    \n",
-    "    check = para.xpath(date_xpath, namespaces=ns)\n",
-    "    if check:\n",
-    "        date = para.xpath(date_xpath, namespaces=ns)[0].text.strip()\n",
-    "    else:\n",
-    "        date = ''\n",
-    "        \n",
-    "        \n",
-    "        \n",
-    "    if ReferenceOld not in ReferenceOld_dic:\n",
-    "        ReferenceOld_dic[ReferenceOld] = ReferenceOld   \n",
-    "   \n",
-    "\n",
-    "    if ReferenceOld not in ReferenceNew_dic:\n",
-    "        ReferenceNew_dic[ReferenceOld] = ReferenceNew   \n",
-    "        \n",
-    "        \n",
-    "         \n",
-    "    if ReferenceOld not in ContentDescription_dic:\n",
-    "        ContentDescription_dic[ReferenceOld] = ContentDescription   \n",
-    "    else:\n",
-    "        if ContentDescription!='':\n",
-    "            ContentDescription_dic[ReferenceOld]+=\"\\n\"+ContentDescription\n",
-    "        else:\n",
-    "            ContentDescription_dic[ReferenceOld]=ContentDescription_dic[ReferenceOld]\n",
-    "            \n",
-    "    \n",
-    "    if ReferenceOld not in title_dic:\n",
-    "        title_dic[ReferenceOld] = title\n",
-    "    else: \n",
-    "        if title!='':\n",
-    "            title_dic[ReferenceOld]+=\"\\n\"+title\n",
-    "        else:\n",
-    "            title_dic[ReferenceOld]=title_dic[ReferenceOld]\n",
-    "            \n",
-    "        \n",
-    "    \n",
-    "    if ReferenceOld not in PhysicalDescription_dic:\n",
-    "        PhysicalDescription_dic[ReferenceOld] = PhysicalDescription\n",
-    "    else:\n",
-    "        if PhysicalDescription!='':\n",
-    "            PhysicalDescription_dic[ReferenceOld]+=\"\\n\"+PhysicalDescription\n",
-    "        else:\n",
-    "            PhysicalDescription_dic[ReferenceOld]=PhysicalDescription_dic[ReferenceOld]\n",
-    "    \n",
-    "    if ReferenceOld not in date_dic:\n",
-    "        date_dic[ReferenceOld] = date\n",
-    "    else: \n",
-    "        if date!='':\n",
-    "            date_dic[ReferenceOld]+=\"\\n\"+date\n",
-    "        else:\n",
-    "            date_dic[ReferenceOld]=date_dic[ReferenceOld]\n",
-    "            \n",
-    "        \n",
-    "        \n",
-    "    \n",
-    "        \n",
-    "\n",
-    "    \n",
-    "\n",
-    "table = pd.DataFrame.from_dict({'ReferenceOld':pd.Series(ReferenceOld_dic),'ReferenceNew':pd.Series(ReferenceNew_dic),'Title':pd.Series(title_dic), 'PhysicalDescription':pd.Series(PhysicalDescription_dic), 'ContentDescription':pd.Series(ContentDescription_dic), 'Item date':pd.Series(date_dic)}\n",
-    ")\n",
-    "    \n",
-    "table = table.applymap(lambda x: x.strip('\\n') if type(x)==str else x)\n",
-    "\n",
-    "header_list = ['ReferenceOld', 'ReferenceNew', 'Title', 'PhysicalDescription','ContentDescription', 'Item date','Language','Creator']\n",
-    "table = table.reindex(columns = header_list) \n",
-    "\n",
-    "table.to_csv(file+\".csv\", encoding=\"utf-8\") \n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -311,17 +153,6 @@
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>5</td>\n",
-       "      <td>MSS Eur F.1</td>\n",
-       "      <td>[JOSIAH WEBBE?]</td>\n",
-       "      <td>39 x 25 cm. pp. 126.</td>\n",
-       "      <td>Verbael ,  uijt  afgesonden en aengekomen brie...</td>\n",
-       "      <td></td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>1</td>\n",
@@ -366,69 +197,141 @@
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>5</td>\n",
+       "      <td>MSS Eur F.1</td>\n",
+       "      <td>[JOSIAH WEBBE?]</td>\n",
+       "      <td>39 x 25 cm. pp. 126.</td>\n",
+       "      <td>Verbael ,  uijt  afgesonden en aengekomen brie...</td>\n",
+       "      <td></td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
        "   ReferenceOld       ReferenceNew  \\\n",
-       "5             5       MSS Eur F.1    \n",
        "1             1  Mss. Eur. G. 1 .    \n",
        "2            2      Mss. Eur. D. 2   \n",
        "3            3    MSS. Eur. G. 2 .   \n",
        "4             4    MSS.Eur . D.3 .   \n",
+       "5             5       MSS Eur F.1    \n",
        "\n",
        "                                                Title  \\\n",
-       "5                                     [JOSIAH WEBBE?]   \n",
        "1    [“ Rec d from Exam rs  Office\" 5 Oct. 1814.]\\...   \n",
        "2   A Decree of the Holy Congregation Generall for...   \n",
        "3                  Peticion of ye East India Company.   \n",
        "4   [Purchased 14 July 1916.]\\n[ Batavia's , Statu...   \n",
+       "5                                     [JOSIAH WEBBE?]   \n",
        "\n",
        "                                  PhysicalDescription  \\\n",
-       "5                                39 x 25 cm. pp. 126.   \n",
        "1                                50 x 30 cm, pp. 264.   \n",
        "2                           30 x 18.5 cm, ' Foll . 3.   \n",
        "3   44 x 32' cm. One sheet, framed and hung in the...   \n",
        "4                           33 x '21 cm. pp., vi, 200   \n",
+       "5                                39 x 25 cm. pp. 126.   \n",
        "\n",
        "                                   ContentDescription       Item date  \\\n",
-       "5   Verbael ,  uijt  afgesonden en aengekomen brie...                   \n",
        "1   There is no general title, but the manuscript ...  1914 and 1919.   \n",
        "2   The watermarks are (a) Arms, Quarterly: 1st an...                   \n",
        "3   This document is reproduced (actual size) in R...                   \n",
        "4   This volume is lettered \" Batasia's  Statut  B...                   \n",
+       "5   Verbael ,  uijt  afgesonden en aengekomen brie...                   \n",
        "\n",
        "    Language  Creator  \n",
-       "5        NaN      NaN  \n",
        "1        NaN      NaN  \n",
        "2        NaN      NaN  \n",
        "3        NaN      NaN  \n",
-       "4        NaN      NaN  "
+       "4        NaN      NaN  \n",
+       "5        NaN      NaN  "
       ]
      },
-     "execution_count": 66,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "table = pd.DataFrame()\n",
+    "\n",
+    "ReferenceOld_dic = {}\n",
+    "ReferenceNew_dic = {}\n",
+    "title_dic = {}\n",
+    "ContentDescription_dic = {}\n",
+    "PhysicalDescription_dic = {}\n",
+    "date_dic = {}\n",
+    "\n",
+    "ReferenceOld = float('NaN')\n",
+    "ReferenceNew = float('NaN')\n",
+    "title = ''\n",
+    "PhysicalDescription = ''\n",
+    "ContentDescription = ''\n",
+    "date = ''\n",
+    "\n",
+    "def populate_series(key, value, dictionary, mode):\n",
+    "    if key not in dictionary:\n",
+    "        dictionary[key] = value\n",
+    "    if mode=='content': \n",
+    "        if value not in dictionary[key]:\n",
+    "            dictionary[key]+=\"\\n\"+value\n",
+    "            value = ''\n",
+    "    return dictionary, value\n",
+    "    \n",
+    "\n",
+    "def get_info(para, xpath, field):\n",
+    "    if para.xpath(xpath, namespaces=ns):\n",
+    "        text = para.xpath(xpath, namespaces=ns)\n",
+    "        field = \" \".join([t.text.strip() for t in text]).strip('\\n')\n",
+    "    return field\n",
+    "\n",
+    "\n",
+    "\n",
+    "for i, para in enumerate(et.xpath('//w:p', namespaces=ns)):\n",
+    "    \n",
+    "    ##TODO: here we could add some contraints in case there is just old or new refernce (or we add it to the guidelines)\n",
+    "    \n",
+    "    ###extract info from word\n",
+    "    \n",
+    "    ReferenceOld = get_info(para, ReferenceOld_xpath, ReferenceOld)\n",
+    "    ReferenceNew = get_info(para, ReferenceNew_xpath, ReferenceNew)\n",
+    "    title = get_info(para, title_xpath, title)\n",
+    "    PhysicalDescription = get_info(para, PhysicalDescription_xpath, PhysicalDescription)\n",
+    "    ContentDescription = get_info(para, ContentDescription_xpath, ContentDescription)\n",
+    "    date = get_info(para, date_xpath, date)\n",
+    "           \n",
+    "    ###create searies\n",
+    "   \n",
+    "    ReferenceOld_dic, ReferenceOld = populate_series(ReferenceOld, ReferenceOld, ReferenceOld_dic, \"ref\")\n",
+    "    ReferenceNew_dic, ReferenceNew = populate_series(ReferenceOld, ReferenceNew, ReferenceNew_dic, \"ref\")\n",
+    "    title_dic, title = populate_series(ReferenceOld, title, title_dic, \"content\")\n",
+    "    date_dic, date = populate_series(ReferenceOld, date, date_dic, \"content\")\n",
+    "    ContentDescription_dic, ContentDescription = populate_series(ReferenceOld, ContentDescription, ContentDescription_dic, \"content\")\n",
+    "    PhysicalDescription_dic, PhysicalDescription = populate_series(ReferenceOld, PhysicalDescription, PhysicalDescription_dic, \"content\")\n",
+    "\n",
+    "            \n",
+    "\n",
+    "table = pd.DataFrame.from_dict({'ReferenceOld':pd.Series(ReferenceOld_dic),'ReferenceNew':pd.Series(ReferenceNew_dic),'Title':pd.Series(title_dic), 'PhysicalDescription':pd.Series(PhysicalDescription_dic), 'ContentDescription':pd.Series(ContentDescription_dic), 'Item date':pd.Series(date_dic)}\n",
+    ")\n",
+    "\n",
+    "table = table.applymap(lambda x: x.strip('\\n') if type(x)==str else x)\n",
+    "\n",
+    "header_list = ['ReferenceOld','ReferenceNew', 'Title', 'PhysicalDescription','ContentDescription', 'Item date','Language','Creator']\n",
+    "table = table.reindex(columns = header_list) \n",
+    "table = table.dropna(how='all', subset=['ReferenceOld', 'ReferenceNew'])\n",
+    "\n",
+    "table.to_csv(file+\".csv\", encoding='utf-8-sig') \n",
+    "\n",
     "table"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'5': 'MSS Eur F.1 ', '1': 'Mss. Eur. G. 1 . ', '2 ': 'Mss. Eur. D. 2', '3 ': 'MSS. Eur. G. 2 .', '4': 'MSS.Eur . D.3 .'}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(ReferenceNew_dic)"
    ]
@@ -442,21 +345,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1\n",
-      "2 \n",
-      "3 \n",
-      "4\n",
-      "5\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for i, para in enumerate(et.xpath('//w:p', namespaces=ns)):\n",
     "    \n",
